<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello</string>
    <string name="app_name">Text Scanner</string>
    <string name="button_text">Recognize</string>
    <string name="text_hint">Recognition text will appear here</string>
    <string name="translate_hint">Translation text will appear here</string>
    <string name="choose_rec_lang">Choose recognition language</string>
    <string name="choose_trans_lang">Choose translation language</string>
    <string name="recognition_eng">Recognition language: english</string>
    <string name="recognition_rus">Recognition language: russian</string>
    <string name="recognition_ukr">Recognition language: ukrainian</string>
    <string name="recognition_france">Recognition language: french</string>
    <string name="recognition_spa">Recognition language: spanish</string>
    <string name="translation_eng">Translation language: english</string>
    <string name="translation_rus">Translation language: russian</string>
    <string name="translation_ukr">Translation language: ukrainian</string>
    <string name="translation_fra">Translation language: french</string>
    <string name="translation_spa">Translation language: spanish</string>
    <string name="camera_permission_text">Camera permission is needed to using recognition function!</string>
    <string name="open_permissions">Open Permissions and grant the permission(s)</string>
    <string name="permission_isnt_granted">Permission isn\'t granted</string>
    <string name="settings">SETTINGS</string>
    <string name="permission_denied">Camera Permissions denied.</string>
    <string name="get_translation">Translate</string>
    <string name="grant">GRANT</string>

</resources>